# minds_cds-workshop24-csh-fire_prevention

./: .gitignore  LICENSE  README.md
.overleaf/: main.tex
replit_demo1/: api_utils.py  audio_utils.py  key.py  main.py  notebook.ipynb  pyproject.toml  views.py
replit_demo2/: api_utils.py  font_utils.py  main.py  notebook.ipynb  pdf_utils.py  prompt.py  pyproject.toml  views.py
